front-end: начата работа над админкой, добавлена возможность удалять продукцию, исправлены некоторые ошибки