@@ -2,7 +2,10 @@ package ru.mooncess.Pizzeria.controllers;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import ru.mooncess.Pizzeria.dto.additive.AdditiveCreateDTO;
 import ru.mooncess.Pizzeria.dto.additive.AdditiveDTO;
@@ -20,7 +23,18 @@ public class AdditiveController {
     private final AdditiveMapper mapper;
 
     @GetMapping(value = "/list")
-    public ResponseEntity<List<AdditiveDTO>> getAll() {
-        return ResponseEntity.ok(service.findAll().stream().map(mapper::toDto).collect(Collectors.toList()));
+    public String getAll(Authentication authentication, Model model) {
+        List<AdditiveDTO> additiveList = service.findAll().stream().map(mapper::toDto).toList();
+        model.addAttribute("additiveList", additiveList);
+
+        boolean isAuthenticated = authentication != null && authentication.isAuthenticated();
+        boolean isAdmin = false;
+        if (isAuthenticated) {
+            UserDetails userDetails = (UserDetails) authentication.getPrincipal();
+            isAdmin = userDetails.getAuthorities().stream().anyMatch(authority -> authority.getAuthority().equals("ADMIN"));
+        }
+        model.addAttribute("isAdmin", isAdmin);
+        model.addAttribute("isAuthenticated", isAuthenticated);
+        return "admin/additives";
     }
 }
